2017-11-02      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  removed duplicate and incorrect rule.
	Changed rule for building C files to the correct directory.

2017-11-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/gcc-consolidation.h:  #include "stringpool.h"
	* gm2/gm2-compiler/M2Base.mod:  removed unnecessary forward
          declarations.  (PushSizeOf)  does not assume the fixed
          fixed complex data types exist, uses constants instead.
	* gm2/gm2-gcc/m2type.c:  (build_m2_specific_size_type)
          checks to see if the REAL_TYPE with a desired precision
          exists.  NULL is returned if the target does not support
          the data type.
	* gm2/gm2-gcc/m2type.c:
          (m2type_BuildProcTypeParameterDeclaration) no longer
          layout the paramater type at this time (as it might be a
	  recursive usage of the proctype).

2017-10-30      Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  change linelen to int rather than
          unsigned int, a mismatch found when building for
	  cygwin.

2017-10-04      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/GetOpt.def:  New file.
	* gm2/gm2-libs/GetOpt.mod:  New file.
	* gm2/gm2-libs/getopt.def:  New file.
	* gm2/gm2-libs-ch/getopt.c:  New file.
	* gm2/el/g-mode.el:  change the Modula-2 comment tag
          to (*!m2pim+gm2*)\n")
	* gm2/gm2-compiler/SymbolKey.def:  (ContainsSymKey)
          New procedure.
	* gm2/gm2-compiler/SymbolKey.mod:  (ContainsSymKey)
          New procedure.
	* gm2/gm2-compiler/ppg.mod:  removed unnecessary
          forward declaration prototypes.  (AddEntry)  New
          procedure.  Use SetOfStop rather than BITSET for
          small sets.  Fix off by one error with setsize.
	* gm2/gm2-libs-iso/RndFile.mod:  correct error message.
	* gm2/tools-src/buildpg:  changes to reflect changes to
	  ppg.mod

2017-07-24      Gaius Mulley <gaius@gnu.org>

	* patches/gcc/6.4.0:  01-patches (New file).
	* patches/gcc/6.4.0:  02-patches (New file).