@@ -1,3 +1,12 @@
+2017-11-08      Gaius Mulley <gaius@gnu.org>
+
+	* gm2/Make-lang.in:  removed Storage.c from GM2-LIBS-BOOT-C.
+          made gm2.paranoid dependant upon mc.
+	* gm2/gm2-libs-ch/Storage.c:  removed since it is built (in
+	  the build directory) from Storage.mod via mc.
+	* gm2/gm2-libs-ch/StdIO.c:  removed since it is built (in the
+	  build directory) from StdIO.mod via mc.
+
 2017-11-02      Gaius Mulley <gaius@gnu.org>
 
 	* gm2/Make-lang.in:  removed duplicate and incorrect rule.
